Code refactoring: unused fields removed + misc.