@@ -31,16 +31,14 @@ public class PacUtilsDateTime {
      * <p>
      * Content: {@code  SUN  MON  TUE  WED  THU  FRI  SAT}
      */
-    public final static List<String> WEEKDAY_NAMES = Collections.unmodifiableList(
-            Arrays.asList("SUN", "MON", "TUE", "WED", "THU", "FRI", "SAT"));
+    public final static List<String> WEEKDAY_NAMES = List.of("SUN", "MON", "TUE", "WED", "THU", "FRI", "SAT");
 
     /**
      * List of valid month names as used in the Netscape specification.
      * <p>
      * Content: {@code JAN  FEB  MAR  APR  MAY  JUN  JUL  AUG  SEP  OCT  NOV  DEC}
      */
-    public final static List<String> MONTH_NAMES = Collections.unmodifiableList(
-            Arrays.asList("JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC"));
+    public final static List<String> MONTH_NAMES = List.of("JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC");
 
     private static final TimeZone UTC_TIME = TimeZone.getTimeZone("UTC");
 
